# sortscore

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPENDENCIES.md  LICENSE  README.md  TROUBLESHOOTING.md  create_wt_only_heatmap.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  sortscore_checkpoint_summary.md  sortscore_refactor_checkpoint.md  test_cell_prop_normalization.py  test_edit_diff.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: analysis-template.md
.github/instructions/: notebook_covert.instructions.md
.github/workflows/: release.yml  tests.yml
config/: experiment_setup.csv
demo_data/: batch_config.json  combined_experiment_setup.csv  demo.ipynb  single_experiment_demo.ipynb  tiled_demo.ipynb
demo_data/GLI2_oPool5b/: config.json  config_ordinal.json  experiment_setup.csv  experiment_setup_ordinal.csv  ordinal_vs_mfi_weighted_scores.md  ordinal_vs_mfi_weighted_scores.qmd
docs/: batch_processing.md  cli_arguments.md  contributing.md  index.md  installation.md  usage.md  visualization.md
eln/: OTX2_reanalysis_notes.md  Paper outline.md  Wishlist.md  development_roadmap.xlsx  diagram.mmd  sortscore_architecture.mmd
notebook/: 01_DMS_activity_scores_and_plots.ipynb  02_all_opools_heatmap.ipynb  figures.py  sequence_parsing.py  stats.py
sortscore/: __init__.py  __main__.py  cli.py  console_utils.py  run_analysis.py  run_batch_analysis.py  run_integration.py  sequence_parsing.py
sortscore/analysis/: io.py  (+22 more)
tests/: conftest.py  test_cell_prop_normalization.py  test_gcta_functionality.py  test_plots.py
(+71 files in other folders)
